Add dashboard and snippet components as well as mock user data in the state.s

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -43,3 +43,24 @@ h1 {
   font-weight: bold;
 }
 
+.snippet {
+  display: block;
+  background-color: teal;
+  margin-bottom: 20px;
+}
+
+.snippet-name {
+  display: inline-block;
+}
+
+.snippet-rating {
+  display: inline-block;
+  padding-left: 30px;
+}
+
+.snippet-description {
+  display: block;
+  padding-bottom: 10px
+}
+
+
