Add and delete steps and submit new course data to server / database.

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -138,3 +138,18 @@ a {
 #delete {
   float:right;
 }
+
+#createDescription {
+  display: block;
+  width: 80%;
+  height: 60px;
+}
+
+#createName {
+  display: block;
+}
+
+.stepText {
+  width: 80%;
+  height: 30px;
+}
