--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -2,6 +2,7 @@ html, body {
   margin: 0;
   padding: 0;
   background-color: #FF9F1C;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 h1 {
