--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -32,6 +32,11 @@ a {
   padding: 20px;
   margin-left: 10px;
   margin-right: 10px;
+  border-radius: 5px;
+}
+
+.navLeft:hover {
+  text-decoration: underline;
 }
 
 .navRight {
@@ -46,6 +51,11 @@ a {
   padding: 20px;
   margin-left: 10px;
   margin-right: 10px;
+  border-radius: 5px;
+}
+
+.childRight:hover {
+  text-decoration: underline;
 }
 
 .navLeft .active {
@@ -151,7 +161,23 @@ a {
   display: block;
 }
 
+#title {
+  text-shadow: .5px .5px #2EC4B6;
+  color: #FDFFFC;
+
+}
+
 .stepText {
   width: 80%;
   height: 30px;
+}
+
+input[type="text"] {
+  border-radius: 5px;
+  margin: 5px;
+}
+
+input[type="password"] {
+  border-radius: 5px;
+  margin: 5px;
 }
