Fix error rendering steps descriptions. Add some styling to steps component. Delete rating.jsx file.

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -189,8 +189,15 @@ a {
   border-color: #FDFFFC;
   padding-left: 4px;
   margin-bottom: 10px;
+}
 
+.discussionboard {
+  margin-top: 40px;
+}
 
+.click {
+  font-size: 12px;
+  margin-top: 40px;
 }
 
 input[type="text"] {
