--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -165,6 +165,7 @@ textarea {
   background-color: #FFFAFF;
   border-radius: 5px;
   padding: 5px;
+  text-align: center;
 }
 
 .progress p {
@@ -392,7 +393,7 @@ SIGNUP COMPONENT
 }
 
 /*
-Dashboard Component
+DASHBOARD COMPONENT
  */
 .dashboard h3 {
   margin-bottom: 20px;
@@ -403,6 +404,42 @@ Dashboard Component
   margin-bottom: 15px;
   margin-top: 10px;
 }
+
+/*
+ABOUT COMPONENT
+ */
+.about {
+  text-align: center;
+  margin-top: 50px;
+}
+.about-a {
+  color: #3E92CC;
+  height: 100px;
+}
+
+.about-b {
+  color: #00B1D8;
+  height: 100px;
+}
+
+.about-c {
+  color: #2EC4B6;
+  height: 100px;
+}
+
+.about h4 {
+  color: rgb(22, 31, 26);
+  height: 100px;
+}
+
+/*.about h2 {
+  text-shadow: .2px .2px .5px #1E1B18;
+}*/
+
+
+
+
+
 
 
 
