--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -139,10 +139,14 @@ textarea {
   padding-left: 10px;
   border-radius: 10px;
   margin-right: 100px;
+  border-width: 1px;
+  border-radius: 10px;
+  border-style: solid;
+  border-color: rgb(22, 31, 26);
 }
 
 .snippet:hover {
-  box-shadow: 2px 2px #1E1B18;
+  box-shadow: 1px 1px #1E1B18;
   cursor: pointer;
 }
 
@@ -196,10 +200,28 @@ STEPS COMPONENT
   box-shadow: 2px 2px #1E1B18;
 }
 
+.step:hover .click {
+  text-decoration: underline;
+}
+
 .stepText {
   width: 80%;
   height: 30px;
 }
+
+.ytplayer {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border-width: 0;
+}
+
+.click {
+  font-size: 12px;
+  margin-top: 40px;
+  text-align: center;
+}
+
 
 
 /*
@@ -340,11 +362,6 @@ COURSE VIEW COMPONENT
   margin-top: 40px;
 }
 
-.click {
-  font-size: 12px;
-  margin-top: 40px;
-}
-
 /*
 COURSE COMPONENT
  */
@@ -429,9 +446,9 @@ DASHBOARD COMPONENT
 
 .no-course {
   margin:auto;
-  margin-top: 40px;
-  background-color: #FFEA51;
-  height: 150px;
+  margin-top: 100px;
+  background-color: #FD7377;
+  height: 100px;
   width: 400px;
   padding-top: 30px;
   border-width: 1px;
