--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -225,6 +225,15 @@ STEPS COMPONENT
   padding-left: 10px;
 }
 
+.step-screenshot {
+  display: block;
+  margin: auto;
+  border-color: #1E1B18;
+  border-width: 5px;
+  border-radius: 5px;
+  border-style: solid;
+}
+
 .ytplayer {
   display: block;
   margin-left: auto;
@@ -314,17 +323,6 @@ CREATE COMPONENT
   float:right;
 }
 
-/*CAN WE DELETE THIS?
-.courseSnippet {
-  border-radius: 25px;
-  border: 2px solid #E71D36;
-  padding-left: 10px;
-  padding-right: 10px;
-  width: 800px;
-  height: 120px;
-  position: relative;
-}*/
-
 /*
 COURSE VIEW COMPONENT
  */
@@ -357,6 +355,10 @@ COURSE VIEW COMPONENT
   float:left;
   margin-right: 10px;
 }
+
+/*
+COMMENT COMPONENTS
+ */
 
 .commentInput {
   width: 75%;
