--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -228,10 +228,17 @@ STEPS COMPONENT
 .step-screenshot {
   display: block;
   margin: auto;
+  margin-bottom: 2px;
   border-color: #1E1B18;
   border-width: 5px;
   border-radius: 5px;
   border-style: solid;
+}
+
+.screenshot-desc {
+  margin-top: 0px;
+  font-size: 12px;
+  text-align: center;
 }
 
 .ytplayer {
@@ -403,7 +410,7 @@ COURSE COMPONENT
 
 #course-enroll {
   display: inline-block;
-  margin-left: 300px;
+  margin-left: 100px;
   vertical-align: 20%;
 }
 
