--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -537,3 +537,12 @@ ABOUT COMPONENT
   border-color: transparent;
   cursor: pointer;
 }
+
+.addTag {
+  display: block;
+  margin-top: 10px;
+}
+
+.tagSelect {
+  margin-left: 10px;
+}
