Set height and width for screenshot on client side css.

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -233,6 +233,8 @@ STEPS COMPONENT
   border-width: 5px;
   border-radius: 5px;
   border-style: solid;
+  width: 320px;
+  height: 179px;
 }
 
 .screenshot-desc {
