--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,3 +1,5 @@
+@import 'https://fonts.googleapis.com/icon?family=Material+Icons';
+
 /*
 GENERAL STYLING
  */
@@ -704,4 +706,12 @@ ABOUT COMPONENT
 .react-tags__suggestions li.is-disabled {
   opacity: 0.5;
   cursor: auto;
+}
+
+.comment-icon {
+  display: flex;
+  align-items: center;
+  border-radius: 3px;
+  padding: 8px;
+  background-color: transparent;
 }
