--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -442,11 +442,6 @@ SIGNUP COMPONENT
 BROWSE COMPONENT
  */
 
-.browse h3 {
-  margin-bottom: 15px;
-  margin-top: 10px;
-}
-
 .search {
   margin-left: 10px;
 }
@@ -689,4 +684,19 @@ ABOUT COMPONENT
 
 .material-icons {
   padding-right: 8px;
+}
+
+.browse {
+  display: grid;
+  grid-template-rows: auto auto;
+}
+
+.browse-courses {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.browse-snippets {
+  overflow: auto;
+  height: 75vh;
 }
