--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -700,3 +700,14 @@ ABOUT COMPONENT
   overflow: auto;
   height: 75vh;
 }
+
+.enrollment-counts {
+  float:right;
+  margin-top: 15px;
+  margin-right: 15px;
+  font-size: 16px;
+  border-radius: 5px;
+  padding: 5px;
+  text-align: center;
+  color: white;
+}
