--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -717,3 +717,24 @@ ABOUT COMPONENT
   text-align: center;
   color: white;
 }
+
+.step-preview {
+  clear: both;
+  background-color: #E1ECF4;
+  margin-bottom: 10px;
+  border-radius: 4px;
+  min-height: 43.5px;
+}
+
+.step-preview-num {
+  font-size: 35px;
+  color: #545454;
+  padding: 0 15px 3px 5px;
+  float: left;
+  font-weight: bold;
+}
+
+.step-preview-text {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
